fix last updated at not displaying on mobile

--- a/client/src/dashboard/styles/dashboard/_dashboard.scss
+++ b/client/src/dashboard/styles/dashboard/_dashboard.scss
@@ -193,10 +193,6 @@
 
     &.has-data-false {
       min-height: 0;
-
-      // @include media($screen-sm) {
-      //   height: 150px;
-      // }
     }
 
     .widget__title {
@@ -281,15 +277,6 @@
         @include omega(2n);
         margin-top: 4px;
       }
-    }
-  }
-}
-
-
-.dashboard__below-the-line {
-  .has-data-true {
-    .widget__last-updated {
-      display: block !important;
     }
   }
 }
